# mik32-radar

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  README.md  project.yml
.devcontainer/: Dockerfile  devcontainer.json
app/: CMakeLists.txt  main.c  startup.c  user.ld
app/user/: README.md  delay.c  delay.h  hc_sr04.c  hc_sr04.h  lcd_driver.c  lcd_driver.h  util.c  util.h
cmake/: toolchain_config.cmake
hardware/: CMakeLists.txt
qt_app/Radar-GUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
test/: test_hc_sr04.c  test_util.c
